Made the images transparent

--- a/index.html
+++ b/index.html
@@ -47,81 +47,81 @@
 <section class="max-w-6xl mx-auto px-6 py-12">
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">  
       <!-- Single Image Card -->
-      <div class="relative group overflow-hidden">
+      <div class="relative group">
         <img src="../assets/images/wwf-brand-blacksmith.webp" alt="Brand Blacksmith" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
         </div>
       </div>
       <!-- Single Image Card -->
-      <div class="relative group overflow-hidden">
+      <div class="relative group">
         <img src="../assets/images/wwf-code-conjurer.webp" alt="Code Conjurer" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
         </div>
       </div>
       <!-- Single Image Card -->
-      <div class="relative group overflow-hidden">
+      <div class="relative group">
         <img src="../assets/images/wwf-internet-entrepreneur.webp" alt="Internet Entrepreneur" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
         </div>
       </div>
       <!-- Single Image Card -->
-      <div class="relative group overflow-hidden">
+      <div class="relative group">
         <img src="../assets/images/wwf-mainline-maestro.webp" alt="Mainline Maestro" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
         </div>
       </div>
       <!-- Single Image Card -->
-      <div class="relative group overflow-hidden">
+      <div class="relative group">
         <img src="../assets/images/wwf-media-mogul.webp" alt="Media Mogul" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
         </div>
       </div>
       <!-- Single Image Card -->
-      <div class="relative group overflow-hidden">
+      <div class="relative group">
         <img src="../assets/images/wwf-the-creator.webp" alt="The Creator" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
         </div>
       </div>
       <!-- Single Image Card -->
-      <div class="relative group overflow-hidden">
+      <div class="relative group">
         <img src="../assets/images/wwf-the-equalizer.webp" alt="The Equalizer" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
         </div>
       </div>
       <!-- Single Image Card -->
-      <div class="relative group overflow-hidden">
+      <div class="relative group">
         <img src="../assets/images/wwf-code-carver.webp" alt="Code Carver" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
         </div>
       </div>
       <!-- Single Image Card -->
-      <div class="relative group overflow-hidden">
+      <div class="relative group">
         <img src="../assets/images/wwf-rogue-rebel.webp" alt="Rogue Rebel" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
