--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!-- Single Image Card -->
       <div class="relative group">
         <img src="../assets/images/wwf-brand-blacksmith.webp" alt="Brand Blacksmith" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
@@ -58,7 +58,7 @@
       <!-- Single Image Card -->
       <div class="relative group">
         <img src="../assets/images/wwf-code-conjurer.webp" alt="Code Conjurer" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
@@ -67,7 +67,7 @@
       <!-- Single Image Card -->
       <div class="relative group">
         <img src="../assets/images/wwf-internet-entrepreneur.webp" alt="Internet Entrepreneur" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
@@ -76,7 +76,7 @@
       <!-- Single Image Card -->
       <div class="relative group">
         <img src="../assets/images/wwf-mainline-maestro.webp" alt="Mainline Maestro" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
@@ -85,7 +85,7 @@
       <!-- Single Image Card -->
       <div class="relative group">
         <img src="../assets/images/wwf-media-mogul.webp" alt="Media Mogul" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
@@ -94,7 +94,7 @@
       <!-- Single Image Card -->
       <div class="relative group">
         <img src="../assets/images/wwf-the-creator.webp" alt="The Creator" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
@@ -103,7 +103,7 @@
       <!-- Single Image Card -->
       <div class="relative group">
         <img src="../assets/images/wwf-the-equalizer.webp" alt="The Equalizer" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
@@ -112,7 +112,7 @@
       <!-- Single Image Card -->
       <div class="relative group">
         <img src="../assets/images/wwf-code-carver.webp" alt="Code Carver" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
@@ -121,7 +121,7 @@
       <!-- Single Image Card -->
       <div class="relative group">
         <img src="../assets/images/wwf-rogue-rebel.webp" alt="Rogue Rebel" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
-        <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-0 transition-opacity duration-300">
+        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
           </button>
