--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
 <section id="home-hero">
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
-        <img src="../assets/images/rogue-rebel-header.webp" alt="Rogue Rebel" class="w-max-[300px] m-auto mb-4">
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl hero-title">WWF ACTION FIGURE BLISTER PACK</h1>
         <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48">Create custom vintage WWF action figure blister packs with a JSON prompt.</p>
     </div>
@@ -129,7 +128,7 @@
       </div>
     </div>
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
-        <a href="https://stattic.site" target="_blank" class="inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 mt-8 text-sm text-gray-700 bg-gray-100 rounded-full hover:bg-gray-200" role="alert" aria-label="View the JSON prompt">
+        <a href="https://prompts.robertdevore.com/blog/wwf-action-figure-blister-pack-json-prompt/" target="_blank" class="inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 mt-8 text-sm text-gray-700 bg-gray-100 rounded-full hover:bg-gray-200" role="alert" aria-label="View the JSON prompt">
             <span class="hero-new text-xs rounded-full text-white px-4 py-1.5 mr-3">NEW</span> <span class="text-sm font-medium">Get the JSON prompt to create your own figures!</span> 
             <svg class="ml-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
         </a>
