--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <section id="home-hero">
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
-        <img src="../assets/images/rogue-rebel-header.webp" alt="Rogue Rebel WWF Action Figure Blister Pack" class="header-fig w-full h-auto object-cover transition-transform duration-300 m-auto">
+        <img width="240" height="240" src="../assets/images/rogue-rebel-header.webp" alt="Rogue Rebel WWF Action Figure Blister Pack" class="header-fig w-full h-auto object-cover transition-transform duration-300 m-auto">
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl hero-title">WWF ACTION FIGURE BLISTER PACK</h1>
         <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48">Create custom vintage WWF action figure blister packs with a JSON prompt.</p>
     </div>
@@ -48,7 +48,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">  
       <!-- Single Image Card -->
       <div class="relative group">
-        <img src="../assets/images/wwf-brand-blacksmith.webp" alt="Brand Blacksmith" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
+        <img width="1024" height="1536" src="../assets/images/wwf-brand-blacksmith.webp" alt="Brand Blacksmith" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
@@ -57,7 +57,7 @@
       </div>
       <!-- Single Image Card -->
       <div class="relative group">
-        <img src="../assets/images/wwf-code-conjurer.webp" alt="Code Conjurer" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
+        <img width="1024" height="1536" src="../assets/images/wwf-code-conjurer.webp" alt="Code Conjurer" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
@@ -66,7 +66,7 @@
       </div>
       <!-- Single Image Card -->
       <div class="relative group">
-        <img src="../assets/images/wwf-mainline-maestro.webp" alt="Mainline Maestro" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
+        <img width="1024" height="1536" src="../assets/images/wwf-mainline-maestro.webp" alt="Mainline Maestro" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
@@ -75,7 +75,7 @@
       </div>
       <!-- Single Image Card -->
       <div class="relative group">
-        <img src="../assets/images/wwf-media-mogul.webp" alt="Media Mogul" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
+        <img width="1024" height="1536" src="../assets/images/wwf-media-mogul.webp" alt="Media Mogul" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
@@ -84,7 +84,7 @@
       </div>
       <!-- Single Image Card -->
       <div class="relative group">
-        <img src="../assets/images/wwf-internet-entrepreneur.webp" alt="Internet Entrepreneur" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
+        <img width="1024" height="1536" src="../assets/images/wwf-internet-entrepreneur.webp" alt="Internet Entrepreneur" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
@@ -93,7 +93,7 @@
       </div>
       <!-- Single Image Card -->
       <div class="relative group">
-        <img src="../assets/images/wwf-the-equalizer.webp" alt="The Equalizer" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
+        <img width="1024" height="1536" src="../assets/images/wwf-the-equalizer.webp" alt="The Equalizer" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
@@ -102,7 +102,7 @@
       </div>
       <!-- Single Image Card -->
       <div class="relative group">
-        <img src="../assets/images/wwf-the-creator.webp" alt="The Creator" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
+        <img width="1024" height="1536" src="../assets/images/wwf-the-creator.webp" alt="The Creator" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
@@ -111,7 +111,7 @@
       </div>
       <!-- Single Image Card -->
       <div class="relative group">
-        <img src="../assets/images/wwf-code-carver.webp" alt="Code Carver" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
+        <img width="1024" height="1536" src="../assets/images/wwf-code-carver.webp" alt="Code Carver" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
@@ -120,7 +120,7 @@
       </div>
       <!-- Single Image Card -->
       <div class="relative group">
-        <img src="../assets/images/wwf-rogue-rebel.webp" alt="Rogue Rebel" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
+        <img width="1024" height="1536" src="../assets/images/wwf-rogue-rebel.webp" alt="Rogue Rebel" class="w-full h-auto object-cover transition-transform duration-300 group-hover:scale-105">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
           <button class="text-white bg-orange-600 px-6 py-2 rounded-lg text-sm font-semibold shadow-md">
             SOLD OUT
