--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <section id="home-hero">
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
         <img width="240" height="240" src="../assets/images/rogue-rebel-header.webp" alt="Rogue Rebel WWF Action Figure Blister Pack" class="header-fig w-full h-auto object-cover transition-transform duration-300 m-auto">
-        <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl hero-title">WWF ACTION FIGURE BLISTER PACK</h1>
+        <h1 class="mb-4 text-4xl font-bold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl hero-title">WWF ACTION FIGURE BLISTER PACK</h1>
         <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48">Create custom vintage WWF action figure blister packs with a JSON prompt.</p>
     </div>
 </section>
